[build-system]
requires = ["poetry>=1.7"]
build-backend = "poetry.masonry.api"

[tool.poetry]
name = "clisnips"
version = "0.5.0"
description = "A command-line snippets manager."
authors = ["ju1ius <jules.bernable@gmail.com>"]
license = "GPL-3.0+"
readme = "README.md"
repository = "https://github.com/ju1ius/clisnips"
keywords = ["snippet", "snippets", "cli", "tui"]
classifiers = [
  'Development Status :: 3 - Alpha',
  'License :: OSI Approved :: GNU General Public License v3 or later (GPLv3+)',
  'Environment :: Console',
  'Environment :: Console :: Curses',
  'Operating System :: Unix',
  'Operating System :: POSIX',
  'Operating System :: Microsoft :: Windows',
  'Programming Language :: Python',
  'Programming Language :: Python :: 3.11',
  'Programming Language :: Python :: Implementation :: CPython',
  'Topic :: Terminals',
  'Topic :: Terminals :: Terminal Emulators/X Terminals',
  'Topic :: System :: System Shells',
  'Topic :: Utilities',
]

[tool.poetry.scripts]
clisnips = 'clisnips.__main__:main'

[tool.poetry.dependencies]
python = "^3.11"
urwid = "^2.2.3"
pygments = "^2.16.1"
observ = "^0.14"
pydantic = "^2.4.2"
tomlkit = "^0.12.3"
typing-extensions = "^4.8.0"

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.3"
pyfakefs = "^5.3.0"
ruff = "^0.1.6"

[tool.ruff]
target-version = "py311"
line-length = 120

[tool.ruff.format]
quote-style = "single"

[tool.ruff.lint]
extend-select = [
  'UP', # pyupgrade
]
